# beans-extra

./: .gitignore  pyproject.toml
src/beansql/: populate.py  schemas.py
src/beansql/models/: core.py  directives.py
